--- a/06-Maintenance-playbook.yml
+++ b/06-Maintenance-playbook.yml
@@ -7,5 +7,5 @@
   - name: Update Maintenance
     copy:
      src: Maintenance.html
-     dest: var/www/html/index.html
+     dest: /var/www/html/index.html
 ...
