--- a/Ansible_hosts.ini
+++ b/Ansible_hosts.ini
@@ -1,6 +1,6 @@
 [Group1]
-n1 ansible_host=172.31.47.108 ansible_user=centos ansible_ssh_private_key_file=/home/centos/plank.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no'
-n2 ansible_host=172.31.38.242 ansible_user=centos ansible_ssh_private_key_file=/home/centos/plank.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no'
+n1 ansible_host=172.31.7.133 ansible_user=ubuntu ansible_ssh_private_key_file=/home/centos/plank.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no'
+n2 ansible_host=172.31.14.165 ansible_user=centos ansible_ssh_private_key_file=/home/centos/plank.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no'
 
 [Group2]
 n3 ansible_host=172.31.44.214 ansible_user=centos ansible_ssh_private_key_file=/home/centos/plank.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no'
