--- a/08-Multi_platforms.yml
+++ b/08-Multi_platforms.yml
@@ -5,22 +5,22 @@
 
   tasks:
   - name: Install httpd
-    dnf:
+    yum:
      name: httpd
      state: present
-    when: ansible_distribution == "Amazon"
+    when: ansible_distribution == "centos"
 
   - name: Start httpd
     service:
      name: httpd
      state: started
-    when: ansible_distribution == "Amazon"
+    when: ansible_distribution == "centos"
 
   - name: Enable httpd
     service:
      name: httpd
      enabled: yes
-    when: ansible_distribution == "Amazon"
+    when: ansible_distribution == "centos"
 
 - name: Install apache server
   hosts: Group1
