--- a/08-Multi_platforms.yml
+++ b/08-Multi_platforms.yml
@@ -23,7 +23,7 @@
     when: ansible_distribution == "centos"
 
   - name: Install httpd
-    yum:
+    dnf:
      name: httpd
      state: present
     when: ansible_distribution == "Amazon"
@@ -40,7 +40,6 @@
      enabled: yes
     when: ansible_distribution == "Amazon"
   
-  tasks:
   - name: Install apache2
     apt:
      name: apache2
