--- a/08-Multi_platforms.yml
+++ b/08-Multi_platforms.yml
@@ -5,10 +5,11 @@
 
   tasks:
   - name: Install httpd
-    dnf:
+    yum:
      name: httpd
      state: present
     when: ansible_distribution == "Amazon" or ansible_distribution == "centos"
+  
   - name: Start httpd
     service:
      name: httpd
