--- a/08-Multi_platforms.yml
+++ b/08-Multi_platforms.yml
@@ -8,17 +8,19 @@
     yum:
      name: httpd
      state: present
-
+    when: ansible_distribution == "centos" or ansible_distribution == "Amazon"
+    
   - name: Start httpd
     service:
      name: httpd
      state: started
+    when: ansible_distribution == "centos" or ansible_distribution == "Amazon"
 
   - name: Enable httpd
     service:
      name: httpd
      enabled: yes
-  
+    when: ansible_distribution == "centos" or ansible_distribution == "Amazon"
   tasks:
   - name: Install apache2
     apt:
