--- a/09-Static.yml
+++ b/09-Static.yml
@@ -4,7 +4,7 @@
   become: yes
 
   tasks:
-  - name: Static Page
+  - name: Update Static Page
     copy:
      src: static.html
      dest: /var/www/html/static.html
