--- a/11-Vars.yml
+++ b/11-Vars.yml
@@ -8,7 +8,8 @@
 
   tasks:
   - name: Update Dynamic Page
-    copy:
-     src: static.html
-     dest: /var/www/html/static.html
+    template:
+     src: dynamic.j2
+     dest: /var/www/html/dynamic.html
+     force: yes
 ...
