--- a/08-Multi_platforms.yml
+++ b/08-Multi_platforms.yml
@@ -4,6 +4,17 @@
   become: yes
 
   tasks:
+
+  - name: Ensure System Packages Updated
+    yum:
+      update_cache: yes
+    when: ansible_distribution == "centos" or ansible_distribution == "Amazon"
+
+  - name: Ensure System Packages Updated
+    apt:
+      update_cache: yes
+    when: ansible_distribution == "Ubuntu" or ansible_distribution == "Debian"
+
   - name: Install httpd
     yum:
      name: httpd
@@ -21,8 +32,7 @@
      name: httpd
      enabled: yes
     when: ansible_distribution == "centos" or ansible_distribution == "Amazon"
-    
-  tasks:
+
   - name: Install apache2
     apt:
      name: apache2
