--- a/08-Multi_platforms.yml
+++ b/08-Multi_platforms.yml
@@ -8,7 +8,7 @@
   - name: Ensure System Packages Updated
     yum:
       update_cache: yes
-    when: ansible_distribution == "centos" or ansible_distribution == "Amazon"
+    when: ansible_distribution == "Centos" or ansible_distribution == "Amazon"
 
   - name: Ensure System Packages Updated
     apt:
@@ -19,19 +19,14 @@
     yum:
      name: httpd
      state: present
-    when: ansible_distribution == "centos" or ansible_distribution == "Amazon"
+    when: ansible_distribution == "Centos" or ansible_distribution == "Amazon"
 
   - name: Start httpd
     service:
      name: httpd
      state: started
-    when: ansible_distribution == "centos" or ansible_distribution == "Amazon"
-
-  - name: Enable httpd
-    service:
-     name: httpd
      enabled: yes
-    when: ansible_distribution == "centos" or ansible_distribution == "Amazon"
+    when: ansible_distribution == "Centos" or ansible_distribution == "Amazon"
 
   - name: Install apache2
     apt:
@@ -40,12 +35,6 @@
     when: ansible_distribution == "Ubuntu" or ansible_distribution == "Debian"
 
   - name: Start apache2
-    service:
-     name: apache2
-     state: started
-    when: ansible_distribution == "Ubuntu" or ansible_distribution == "Debian"
-
-  - name: Enable apache2
     service:
      name: apache2
      enabled: yes
