--- a/08-Multi_platforms.yml
+++ b/08-Multi_platforms.yml
@@ -8,7 +8,7 @@
   - name: Ensure System Packages Updated
     yum:
       update_cache: yes
-    when: ansible_distribution == "Centos" or ansible_distribution == "Amazon"
+    when: ansible_distribution == "CentOS" or ansible_distribution == "Amazon"
 
   - name: Ensure System Packages Updated
     apt:
@@ -19,14 +19,14 @@
     yum:
      name: httpd
      state: present
-    when: ansible_distribution == "Centos" or ansible_distribution == "Amazon"
+    when: ansible_distribution == "CentOS" or ansible_distribution == "Amazon"
 
   - name: Start httpd
     service:
      name: httpd
      state: started
      enabled: yes
-    when: ansible_distribution == "Centos" or ansible_distribution == "Amazon"
+    when: ansible_distribution == "CentOS" or ansible_distribution == "Amazon"
 
   - name: Install apache2
     apt:
